# tui-components

./: Cargo.toml
src/: lib.rs  shortcuts.rs
src/input/: login.rs  mod.rs  search.rs
src/storage/: json.rs  mod.rs  secret.rs  session.rs  time.rs
src/ui/: layout.rs  login.rs  mod.rs  search.rs  settings.rs  text.rs  theme.rs  widgets.rs
