[package]
name = "tui-components"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3.23.0"
